# APTP_project

./: README.md
problem1/crane/: domain1_crane.pddl  problem1_crane.pddl
problem1/simple/: domain1_simple.pddl  problem1_simple.pddl
problem2/fluents/: domain2_fluents.pddl  problem2_fluents.pddl
problem2/simple/: domain2_simple.pddl  problem2_simple.pddl
problem3/htn1/: domain3_htn1.hddl  problem3_htn1.hddl
problem3/htn2/: domain3_htn2.hddl  problem3_htn2.hddl
problem4/fluents/: domain4_fluents.pddl  problem4_fluents.pddl
problem4/simple/: domain4_simple.pddl  problem4_simple.pddl
problem5/plansys2_problem5_fluents/: CMakeLists.txt  package.xml  terminal1.sh
problem5/plansys2_problem5_fluents/launch/: plansys2_problem5_launch.py
problem5/plansys2_problem5_fluents/pddl/: problem5_domain.pddl  problem5_problem
problem5/plansys2_problem5_fluents/src/: deliver_food_node.cpp  load_carrier_node.cpp  move_carrier_with_box_node.cpp  unload_carrier_node.cpp
problem5/plansys2_problem5_simple/: CMakeLists.txt  package.xml  terminal1.sh
problem5/plansys2_problem5_simple/launch/: plansys2_problem5_launch.py
problem5/plansys2_problem5_simple/pddl/: problem5_domain.pddl  problem5_problem
problem5/plansys2_problem5_simple/src/: deliver_medicine_node.cpp  deliver_tool_node.cpp  fill_box_node.cpp  move_carrier_without_box_node.cpp  unfill_box_node.cpp
